[gd_scene load_steps=3 format=3 uid="uid://kiy6jj6oeflt"]

[ext_resource type="Theme" uid="uid://d2w1aa0rw0nno" path="res://assets/Theme/panelTheme.tres" id="1_8rvck"]
[ext_resource type="Script" path="res://Code/Battle/BattleUI/InformationSlider.gd" id="2_o40yb"]

[node name="Right Slider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8rvck")
script = ExtResource("2_o40yb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -212.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "CARDNAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="KeyValues" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Value1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/KeyValues"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP = 10"
horizontal_alignment = 1

[node name="Value2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/KeyValues"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP = 10"
horizontal_alignment = 1

[node name="NAname" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Normal Attack"

[node name="NAdescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Normal Attack Description"
autowrap_mode = 3

[node name="SAname" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Special Attack"

[node name="SAdescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Special Attack Description"
autowrap_mode = 3

[node name="CAname" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Charged Attack"

[node name="CAdescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Charged Attack Description"
autowrap_mode = 3

[node name="AbilityName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "ABILITY"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AbilityDescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Ability Description"
autowrap_mode = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NAname" to="." method="NAbuttonPressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SAname" to="." method="SAbuttonPressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CAname" to="." method="CAbuttonPressed"]
